<resources>
    <string name="app_name">DDS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Debaleen Das Spandan</string>
    <string name="nav_header_subtitle">ddsmegh18@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_contact">Contact Me</string>
    <string name="nav_skills">Skills</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_rate">Rate Me</string>
    <string name="nav_send">Send</string>
    <string name="nav_share">Share</string>
    <string name="sharing">Sharing is caring</string>
    <string name="contact_name">Name</string>
    <string name="contact_email">Email</string>
    <string name="contact_number">7478755667</string>
    <string name="contact_time">9 AM to 9 PM</string>
    <string name="contact_day">Monday to Friday</string>
    <string name="back">Back</string>
    <string name="aboutme"><u>About Me</u></string>
    <string name="myname">Debaleen Das Spandan</string>
    <string name="mydob">Day Month, Year</string>
    <string name="myabout">| Ambivert | Intuitive |\n| Skeptical | Die-hard coder |</string>
    <string name="hackerrank_url"><a href="https://www.hackerrank.com/ddsmegh4">Find me on Hackerrank!</a></string>
    <string name="facebook_url"><a href="https://www.facebook.com/debaleen.spandan">Connect on Facebook.</a></string>
    <string name="linkedin_url"><a href="https://www.linkedin.com/in/ddsmegh/">Get linked on Linkedin.</a></string>
    <string name="school">Shishu Bihar\nH.S. School</string>
    <string name="university">Bengal College of\nEngineering &amp;\nTechnology</string>
    <string name="home">Agartala, Tripura</string>
    <string name="currentlocation">Durgapur, India</string>
    <string name="namefieldHint">Enter your name</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBNP3oDgsKqn3DzhoT6GIMt9jeLkfGhdbk</string>
    <string name="coverDesc">Cover</string>
    <string name="profileImgDesc">profileImage</string>

    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
